--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "validator": "^13.15.26"
